--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -6,7 +6,7 @@
        <% unless user_signed_in? %>
           <h2 class="mypage-title"></span>addtaskiiへようこそ。 </h2>  
        <% else %>
-          <h3 class="top">Be together</h3>
+          <h3 class="top">our goals</h3>
        <% end %>
      </div>
      <% if user_signed_in?%>
