--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,7 +59,7 @@ nav{
   background-color: white;
 }
 .addtaskbtn{
-  border: 1px solid #000055;
+  border: 1px solid #A7F1FF;
   border-radius: 6px;
   padding: 3px;
   font-family: 'Poppins', sans-serif;
@@ -147,12 +147,12 @@ a.btn--circle {
 }
 .btn-outline{
   font-family: 'Poppins', sans-serif;
-  border: 1px solid;
+  border: 1px solid #A7F1FF;
   background-color: #D7EEFF;
 }
 .btn-outline:hover {
   font-weight: bold;
-  border: 1px solid;
+  border: 1px solid #A7F1FF;
   background-color: white;
 }
 .usershow-btn{
@@ -174,6 +174,10 @@ a.btn--circle {
   color: white;
   border-radius: 50%;
   padding: 12px;
+}
+
+.form-label{
+  font-family: 'Poppins', sans-serif;
 }
   
 
