--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -1,21 +1,25 @@
     <%= form_with(model: @mission, local: true) do |form| %>
-         <div class="mb-3">
-        <label  class="form-label">課題を設定しよう！</label>
-        <%= form.text_field :mission, class:"form-control",placeholder: "例:勉強に集中できない", rows: "10" %>
-      </div>
-      <div class="mb-3">
-        <label  class="form-label">設定日</label>
-        <%= form.date_field :startdate,class:"form-control", placeholder: "始まり" %>
-      </div>
-
-      <div class="mb-3">
-      </div>
-
-      <div class="mb-3">
-        <label  class="form-label">期限日</label>
-        <%= form.date_field :limitdate,class:"form-control", placeholder: "期限" %>
-      </div>
-      <div class="mb-3">
-        <%= form.submit "SEND",class: "btn btn-primary" %>
-      </div>
+         <div class="row">
+          <div class="col-md-4">
+            <label  class="form-label">達成したい目標は？</label>
+            <%= form.text_field :mission, class:"form-control",placeholder: "例:勉強に集中できない", rows: "10" %>
+          </div>
+         </div>
+         <div class="row">
+          <div class="col-md-4">
+              <label  class="form-label">いつから？</label>
+              <%= form.date_field :startdate,class:"form-control", placeholder: "始まり" %>
+          </div>
+         </div>
+         <div class="row">
+          <div class="col-md-4">
+               <label  class="form-label">いつまでに</label>
+               <%= form.date_field :limitdate,class:"form-control", placeholder: "期限" %>
+          </div>
+         </div>
+         <div class="row">
+          <div class="col-md-4">
+            <%= form.submit "SEND",class: "setagoalbtn" %>
+          </div>
+         </div>
     <% end %>
