--- a/app/views/missions/new.html.erb
+++ b/app/views/missions/new.html.erb
@@ -1,6 +1,6 @@
 <div class="contents row">
-  <div class="container">
-    <h3>課題設定画面</h3>
+  <div class="container-fluid">
+    <h3></h3>
     <%= render partial: "form", locals: { mission: @mission } %>
   </div>
 </div>
